some layout issues

--- a/src/components/Teacher/Attendance/Attendance.scss
+++ b/src/components/Teacher/Attendance/Attendance.scss
@@ -34,7 +34,7 @@ td.Attendance__Edit {
 }
 
 .Attendance__HeaderCell__Today {
-  background-color: #9ee2a1 !important;
+  background-color: #c9facb !important;
 }
 
 .Attendance__User {
@@ -58,4 +58,8 @@ td.Attendance__Edit {
 .Attendance__User__Extra {
   font-size: 1.1em;
   color: #72828B;
+}
+
+.Attendance__Table {
+  margin: 2em 0 !important;
 }
